Finished :D Has complete documentation of all the functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,11 @@ add_executable(BlockChain Block.cpp
         BlockChain.cpp
         BlockChain.h
         Block.h
+        Transaction.cpp
+        Transaction.h
+        Node.h
+        Node.cpp
+        main.cpp
 )
 
 target_link_libraries(BlockChain OpenSSL::SSL OpenSSL::Crypto)
